--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 	<div class="row">
 		<div class="darkBG col-sm-6"> test </div>
 	</div>
+	<p> hai </p>
 <!-- Latest compiled and minified JavaScript -->
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 </body>
