--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
     <!-- Add custom CSS here -->
     <link href="css/landing-page.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
 
 </head>
 
@@ -38,7 +39,7 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse navbar-right navbar-ex1-collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="#about">About</a>
+                    <li><a href="About.html">About</a>
                     </li>
                     <li><a href="#services">Services</a>
                     </li>
@@ -89,9 +90,11 @@
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">Death to the Stock Photo:
+                    <h2 class="section-heading">Making This Website:
                         <br>Special Thanks</h2>
-                    <p class="lead">A special thanks to Death to the Stock Photo for providing the photographs that you see in this template. <a target="_blank" href="http://join.deathtothestockphoto.com/">Visit their website</a> to become a member.</p>
+                    <p class="lead">A special thanks to Boostrap for getting this site up and running. Check out the awesome things you can do with their libraries of sleek and functional CSS components  <a target="_blank" href="http://getbootstrap.com/"> here</a>. </p>
+
+                    <p class = "lead"> Also a shoutout to Shubro Saha '15 and Charlie Marsh '15 for inspiring me with their <a target="_blank" href="http://introtohacking.github.io/"> introduction to hacking </a> class. Finally, Nihar Madhavan '15 deserves credit for his tutorial on how creating a website on the <a target="_blank" href="http://www.princeton.edu/~madhavan/website.html"> Princeton domain</a>. </p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                     <img class="img-responsive" src="img/ipad.png" alt="">
@@ -150,30 +153,7 @@
     </div>
     <!-- /.content-section-a -->
 
-    <div class="banner">
-
-        <div class="container">
-
-            <div class="row">
-                <div class="col-lg-6">
-                    <h2>Connect to Start Bootstrap:</h2>
-                </div>
-                <div class="col-lg-6">
-                    <ul class="list-inline banner-social-buttons">
-                        <li><a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
-                        </li>
-                        <li><a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-                        </li>
-                        <li><a href="#" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-
-        </div>
-        <!-- /.container -->
-
-    </div>
+    
     <!-- /.banner -->
 
     <footer>
@@ -184,7 +164,7 @@
                         <li><a href="#home">Home</a>
                         </li>
                         <li class="footer-menu-divider">&sdot;</li>
-                        <li><a href="#about">About</a>
+                        <li><a href="about.html">About</a>
                         </li>
                         <li class="footer-menu-divider">&sdot;</li>
                         <li><a href="#services">Services</a>
@@ -193,7 +173,7 @@
                         <li><a href="#contact">Contact</a>
                         </li>
                     </ul>
-                    <p class="copyright text-muted small">Copyright &copy; Your Company 2013. All Rights Reserved</p>
+                    <p class="copyright text-muted small">Copyright &copy; Quan Zhou 2014. All Rights Reserved</p>
                 </div>
             </div>
         </div>
