--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse navbar-right navbar-ex1-collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="About.html">About</a>
+                    <li><a href="about.html">About</a>
                     </li>
                     <li><a href="#services">Services</a>
                     </li>
