finished restructing the index.html page for now

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                             Coding can be either easy or hard. Stop wasting time chasing preventable bugs and push clean code. </p>
                     </div>
                     <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                        <img class="img-responsive" src="img/phones.png" alt="">
+                        <img class="img-responsive img-rescale" src="img/intro-command.png" alt="">
                     </div>
                 </div>
 
@@ -118,12 +118,21 @@
                     <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
                         <hr class="section-heading-spacer">
                         <div class="clearfix"></div>
-                        <h2 class="section-heading">Essential Programming tools
+                        <h2 class="section-heading">Essential Developer tools
                             </h2>
-                        <p class="lead"> Programs and Applications that I've found to be extremely useful for both small and large scale projects. </p>
+                        <p class="lead"> Programs and Applications that I've found to be extremely useful for both small and large scale projects. 
+                        <br> Includes introduction and links to:
+                        <ul>
+                            <li>Sublime Text</li>
+                            <li>Bash and Git</li>
+                            <li>Chrome Developer Tools</li>
+                            <li>Photoshop</li>
+                        </ul>
+
+                        </p>
                     </div>
                     <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                        <img class="img-responsive" src="img/doge.png" alt="">
+                        <img class="img-responsive img-rescale" src="img/intro-tools.png" alt="">
                     </div>
                 </div>
 
@@ -152,7 +161,7 @@
                     </div>
                     <div class="col-lg-5 col-lg-offset-2 col-sm-6">
 
-                        <img class="img-responsive" src="img/intro-website3.png" alt="">
+                        <img class="img-responsive img-rescale" src="img/intro-website3.png" alt="">
                     </div>
                 </div>
 
