--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                             <li><a href="#" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
                             </li>
                         </ul> -->
-                        <h4> ['pologies for the Appearences. This website is still under construction] </h4>
+                        <h4> ['pologies for the appearances. This website is still under construction] </h4>
                     </div>
                 </div>
             </div>
@@ -95,9 +95,9 @@
                         <hr class="section-heading-spacer">
                         <div class="clearfix"></div>
                         <h2 class="section-heading"> The Programming Commandments </h2>
-                        <p class="lead"> "Thou shalt always copy and paste"  <br> 
+                        <p class="lead"> "Thou shalt copy and paste without mercy"  <br> 
                                                                              <br>
-                            Coding can be either easy or hard. Stop wasting time chasing preventable bugs and push clean code. </p>
+                            Coding can be easy or hard. Stop wasting time chasing preventable bugs and push clean code. </p>
                     </div>
                     <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                         <img class="img-responsive img-rescale" src="img/intro-command.png" alt="">
@@ -118,15 +118,15 @@
                     <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
                         <hr class="section-heading-spacer">
                         <div class="clearfix"></div>
-                        <h2 class="section-heading">Essential Developer tools
+                        <h2 class="section-heading">Essential Developer Tools
                             </h2>
                         <p class="lead"> Programs and Applications that I've found to be extremely useful for both small and large scale projects. 
                         <br> Includes introduction and links to:
                         <ul>
-                            <li>Sublime Text</li>
-                            <li>Bash and Git</li>
-                            <li>Chrome Developer Tools</li>
-                            <li>Photoshop</li>
+                            <li><a href="http://www.sublimetext.com/" target="_blank">Sublime Text </a></li>
+                            <li><a href="https://github.com/barryclark/bashstrap" target="_blank">Bash</a> and <a href="https://github.com/" target="_blank">Git</a></li>
+                            <li><a href="https://developer.chrome.com/devtools/index" target="_blank">Chrome Developer Tools</a></li>
+                            <li><a href="http://tv.adobe.com/show/learn-photoshop-cs6/" target="_blank">Photoshop</a></li>
                         </ul>
 
                         </p>
