--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="http://startbootstrap.com">Start Bootstrap</a>
+                <a class="navbar-brand" href="index.html"> <span class="glyphicon glyphicon-home"></span> </a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -171,10 +171,12 @@
 
         <footer>
             <div class="container">
+                <hr class="section-footing-spacer">
                 <div class="row">
                     <div class="col-lg-12">
+
                         <ul class="list-inline">
-                            <li><a href="#home">Home</a>
+                            <li><a href="index.html">Home</a>
                             </li>
                             <li class="footer-menu-divider">&sdot;</li>
                             <li><a href="about.html">About</a>
