--- a/trash/about.html
+++ b/trash/about.html
@@ -37,7 +37,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html"> <span class="glyphicon glyphicon-home"></span> </a>
+                <a class="navbar-brand" href="http://startbootstrap.com">Start Bootstrap</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -57,7 +57,7 @@
     </nav>
 
     
-    <!----------------------------------------------- /.intro-header ------------------------------------------>
+    <!-- /.intro-header -->
     <div class="container">
     <div class="content-section-a">
         <div class="container">
@@ -79,7 +79,6 @@
 
     <footer>
         <div class="container">
-        <hr class="section-footing-spacer">
             <div class="row">
                 <div class="col-lg-12">
                     <ul class="list-inline">
