--- a/trash/default_page1.html
+++ b/trash/default_page1.html
@@ -25,7 +25,6 @@
 
 
 <body>
-<div class="wrap">
   <div id="main" class="container">
 
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
@@ -56,8 +55,9 @@
         <!-- /.container -->
     </nav>
 
-    
-    <!----------------------------------------------- /.intro-header ------------------------------------------>
+<div class="wrap">
+
+    <!-- /.intro-header -->
     <div class="container">
     <div class="content-section-a">
         <div class="container">
@@ -79,7 +79,6 @@
 
     <footer>
         <div class="container">
-        <hr class="section-footing-spacer">
             <div class="row">
                 <div class="col-lg-12">
                     <ul class="list-inline">
