updated default page

--- a/default_page.html
+++ b/default_page.html
@@ -25,85 +25,118 @@
 
 
 <body>
-<div class="wrap">
-  <div id="main" class="container">
+    <div class="wrap">
+      <div id="main" class="container">
 
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="index.html"> <span class="glyphicon glyphicon-home"></span> </a>
-            </div>
-
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse navbar-right navbar-ex1-collapse">
-                <ul class="nav navbar-nav">
-                    <li><a href="about.html">About</a>
-                    </li>
-                    <li><a href="#services">Services</a>
-                    </li>
-                    <li><a href="#contact">Contact</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container -->
-    </nav>
-
-    
-    <!----------------------------------------------- /.intro-header ------------------------------------------>
-    <div class="container">
-    <div class="content-section-a">
-        <div class="container">
-            <div class="row">
-                <div  class="col-lg-5 col-sm-6">
-                    [This is is under construction] 
+        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="index.html"> <span class="glyphicon glyphicon-home"></span> </a>
                 </div>
-            </div>
-        </div>      
-        <!-- /.container -->
-    </div>
-</div>
-</div>
-    <!-- /.content-section-a -->
-</div>
-    <!-- /.content-section-b -->
 
-    
-
-    <footer>
-        <div class="container">
-        <hr class="section-footing-spacer">
-            <div class="row">
-                <div class="col-lg-12">
-                    <ul class="list-inline">
-                        <li><a href="index.html">Home</a>
-                        </li>
-                        <li class="footer-menu-divider">&sdot;</li>
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse navbar-right navbar-ex1-collapse">
+                    <ul class="nav navbar-nav">
                         <li><a href="about.html">About</a>
                         </li>
-                        <li class="footer-menu-divider">&sdot;</li>
                         <li><a href="#services">Services</a>
                         </li>
-                        <li class="footer-menu-divider">&sdot;</li>
                         <li><a href="#contact">Contact</a>
                         </li>
                     </ul>
-                    <p class="copyright text-muted small">Copyright &copy; Quan Zhou 2014. All Rights Reserved</p>
                 </div>
+                <!-- /.navbar-collapse -->
+            </div>
+            <!-- /.container -->
+        </nav>
+    </div>
+
+    <!----------------------------------------------- /.intro-header ------------------------------------------>
+
+    <div class="row default-banner">
+        <div>
+            <div class="container">
+                <div class="page-header">
+                  <h1>Example page header <small>Subtext for header</small></h1>
+              </div>
+          </div>
+      </div>
+  </div>
+  <div>
+    <div class="container">
+
+
+        <div class="content-section-a">
+            <div class="container">
+                <div class="row">
+                    <div  class="col-xs-12">
+                        <div class="ppad">
+                            <p>
+                                [This is is under construction] 
+                            </p>
+
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia expedita, aspernatur sequi deserunt cupiditate. Harum obcaecati perspiciatis, perferendis. Ad, magnam beatae. Qui, sapiente porro culpa. Accusantium, assumenda ea quos consectetur harum voluptates nemo esse tenetur libero rerum provident voluptas facilis molestiae obcaecati reprehenderit debitis, dolorem molestias iste quidem fuga voluptate!
+                            </p>
+
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam, illo. Illo, minima nisi voluptate dolorum quidem. At libero repellendus ab, nam eaque error inventore dolorum odio. Ad ipsum dignissimos sint dolorum neque libero sit quaerat esse delectus, temporibus incidunt laboriosam consequuntur quos omnis suscipit molestias corporis fuga soluta repellendus! Eveniet, consequuntur, mollitia. Atque eum, similique vitae cum delectus repellat corrupti quos nisi distinctio in perspiciatis enim natus illum dolorum placeat, deserunt facilis esse, ut adipisci cumque aperiam iusto sit ipsam molestias. Expedita est dolorum dicta aliquid consequuntur pariatur, corporis odit laudantium? Sit adipisci hic voluptatibus numquam in similique quod corporis, blanditiis, animi quibusdam quis eos. Possimus, architecto, nostrum. Laudantium ipsa, earum recusandae reiciendis consequatur deleniti sapiente labore nihil esse ipsam repellat, voluptate eligendi, itaque inventore quas! Laudantium et reiciendis sequi non vel consequatur, culpa amet necessitatibus ipsa ex placeat iure possimus iste optio id assumenda molestiae accusantium. Corporis quia itaque mollitia, cupiditate, optio dolor. Earum quidem consectetur, praesentium rem saepe aliquam voluptatum unde totam laborum quas itaque repellat reiciendis deleniti autem, quaerat odit ad dolores tenetur iste cumque voluptate laudantium dolorem? In quis quam modi neque beatae, dolorem voluptatibus excepturi harum ut ab nemo, saepe perferendis esse expedita fuga obcaecati?
+
+                            </p>
+
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum illum perferendis, ipsam molestiae quae nulla dolorum, eligendi quisquam nihil accusamus earum placeat quaerat, praesentium cupiditate possimus corporis delectus quod eaque cumque impedit. Eveniet vero, esse distinctio perferendis ullam. Placeat, esse assumenda. Sint perspiciatis cupiditate odio sequi. Nemo quas non enim odio natus a cumque laboriosam consequuntur ratione dolorum asperiores optio culpa impedit, consectetur, sequi ipsa consequatur molestiae magni placeat eligendi illum possimus, alias. Aut, sequi.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>      
+            <!-- /.container -->
+        </div>
+
+    </div>
+
+
+</div>
+<!-- /.content-section-a -->
+</div>
+<!-- /.content-section-b -->
+
+
+
+<footer>
+    <div class="container">
+        <hr class="section-footing-spacer">
+        <div class="row">
+            <div class="col-lg-12">
+                <ul class="list-inline">
+                    <li><a href="index.html">Home</a>
+                    </li>
+                    <li class="footer-menu-divider">&sdot;</li>
+                    <li><a href="about.html">About</a>
+                    </li>
+                    <li class="footer-menu-divider">&sdot;</li>
+                    <li><a href="#services">Services</a>
+                    </li>
+                    <li class="footer-menu-divider">&sdot;</li>
+                    <li><a href="#contact">Contact</a>
+                    </li>
+                </ul>
+                <p class="copyright text-muted small">Copyright &copy; Quan Zhou 2014. All Rights Reserved</p>
             </div>
         </div>
-    </footer>
+    </div>
+</footer>
 
-    <!-- JavaScript -->
-    <script src="js/jquery-1.10.2.js"></script>
-    <script src="js/bootstrap.js"></script>
+<!-- JavaScript -->
+<script src="js/jquery-1.10.2.js"></script>
+<script src="js/bootstrap.js"></script>
 
 </body>
 
