--- a/about.html
+++ b/about.html
@@ -59,22 +59,27 @@
 
         <!----------------------------------------------- begin content ------------------------------------------>
         <div class="container">
-            <div class="page-header">
+            <div class="jumbotron" id="aboutjumbotron">
+              <h1>Hello, World!</h1>
+              
+          </div>
+           <!--  <div class="page-header">
                 <h1> About this site <small> (and why it is so awesome)</small></h1>
-            </div>
-            <div class="content-section-a">
+            </div> -->
+            <div class="content-section-a" id="aboutbodycontainer">
                 <div class="container">  <!-- container for inner text -->
                     <div class="row">
                         <div class="container">
                             <div  class="col-sm-5 text">
-                                <p>1 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione in a repellendus omnis quibusdam cum laudantium maiores quia nisi fugit facere optio tenetur temporibus exercitationem fuga incidunt, ex! Est optio eligendi esse omnis nesciunt ad expedita provident quas illum neque inventore, voluptatibus laboriosam consequuntur amet quaerat voluptas aut sed, natus, cum perferendis fuga eaque. Provident numquam earum officiis eveniet laborum dolore veritatis non sapiente illum labore, impedit id atque dicta ipsa alias modi voluptatum ratione et totam aspernatur debitis maxime. Provident dolorum sunt sequi assumenda nemo saepe, blanditiis dolore consectetur, commodi accusantium repudiandae incidunt ea officiis voluptatibus. Labore, atque, obcaecati?</p>
+                                <h2> From the Author: </h2>
+                                <img src="img/me_adj.jpg" class="img-responsive img-thumbnail" alt="Responsive image">
                             </div>
                             <div>
-                                <div class="col-sm-7">  
+                                <div class="col-sm-7" id="abouttext">  
                                     <p class="ppad"> 
                                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi quo pariatur, eveniet provident, aspernatur corrupti dignissimos nisi expedita harum deleniti consequatur voluptatibus delectus molestias, ducimus quisquam, voluptate in! Consequuntur asperiores itaque exercitationem quis repellendus consequatur repudiandae quas iste quia reprehenderit maiores nemo recusandae animi doloribus, rerum dolor accusamus, aspernatur adipisci nihil, dicta nulla tempore amet unde deleniti.
                                     </p> 
-                            
+
 
                                     <p class = "ppad">
                                         Inventore, ut possimus. Voluptas ratione explicabo quos ut quibusdam, consequuntur veritatis similique. A quibusdam sed veritatis, neque optio, facilis nisi. Nostrum tenetur repudiandae animi perspiciatis veniam accusantium officiis voluptatum praesentium tempora, minima autem expedita deleniti quidem alias quo repellat perferendis temporibus officia qui nulla harum! Itaque, ad beatae earum pariatur qui delectus adipisci molestias. Repudiandae sit perspiciatis nam ex, voluptate dolorum nesciunt consequuntur pariatur at minima consequatur hic debitis aut neque unde odio reprehenderit quis illum vero ab, doloremque veritatis. Sed autem, officia voluptate eius qui numquam facilis possimus, voluptatibus consequuntur ratione placeat. Voluptatem praesentium modi nobis asperiores pariatur veniam ratione.
@@ -109,7 +114,7 @@
                                 <div class="col-xs-8 col-xs-offset-2">
                                     <h2> What I've Been Up to This Year: </h2>
                                     <div class="row">
-                                     <div class="flex-video widescreen" style="margin: 0 auto;text-align:center;">
+                                       <div class="flex-video widescreen" style="margin: 0 auto;text-align:center;">
                                         <iframe allowfullscreen="" src="http://player.vimeo.com/video/79921197?title=0&amp;byline=0&amp;portrait=0" frameborder="0" width="700" height="393"></iframe>
                                     </div>
                                 </div>
