--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <h1>Quan Zhou</h1>
                         <h2> Dream. Plan. Build </h2>
                         <hr class="intro-divider">
-                        <h3>Princeton Mechanical and Aerospace Engineering '15</h3>
+                        <h3>Princeton Mechanical and Aerospace Engineer '15</h3>
                        <!--  <ul class="list-inline intro-social-buttons">
                             <li><a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
                             </li>
