--- a/tencommandments.html
+++ b/tencommandments.html
@@ -25,85 +25,313 @@
 
 
 <body>
-<div class="wrap">
-  <div id="main" class="container">
-
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="index.html"> <span class="glyphicon glyphicon-home"></span> </a>
-            </div>
-
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse navbar-right navbar-ex1-collapse">
-                <ul class="nav navbar-nav">
-                    <li><a href="about.html">About</a>
-                    </li>
-                    <li><a href="#services">Services</a>
-                    </li>
-                    <li><a href="#contact">Contact</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container -->
-    </nav>
-
+    <div class="wrap">
+      <div id="main" class="container" >
     
-    <!----------------------------------------------- /.intro-header ------------------------------------------>
-    <div class="container">
-    <div class="content-section-a">
-        <div class="container">
-            <div class="row">
-                <div  class="col-lg-5 col-sm-6">
-                    [This is is under construction] 
+        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="index.html" style="margin-left:30px"> <span class="glyphicon glyphicon-home"></span> </a>
                 </div>
-            </div>
-        </div>      
-        <!-- /.container -->
-    </div>
-</div>
-</div>
-    <!-- /.content-section-a -->
-</div>
-    <!-- /.content-section-b -->
 
-    
-
-    <footer>
-        <div class="container">
-        <hr class="section-footing-spacer">
-            <div class="row">
-                <div class="col-lg-12">
-                    <ul class="list-inline">
-                        <li><a href="index.html">Home</a>
-                        </li>
-                        <li class="footer-menu-divider">&sdot;</li>
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse navbar-right navbar-ex1-collapse">
+                    <ul class="nav navbar-nav">
                         <li><a href="about.html">About</a>
                         </li>
-                        <li class="footer-menu-divider">&sdot;</li>
                         <li><a href="#services">Services</a>
                         </li>
-                        <li class="footer-menu-divider">&sdot;</li>
                         <li><a href="#contact">Contact</a>
                         </li>
                     </ul>
-                    <p class="copyright text-muted small">Copyright &copy; Quan Zhou 2014. All Rights Reserved</p>
                 </div>
+                <!-- /.navbar-collapse -->
+            </div>
+            <!-- /.container -->
+        </nav>
+    </div>
+
+    <!----------------------------------------------- /.intro-header ------------------------------------------>
+
+    <div class="row default-banner">
+        <div>
+            <div class="container">
+                <div class="page-header">
+                  <h1>Example page header <small>Subtext for header</small></h1>
+              </div>
+          </div>
+      </div>
+  </div>
+  <div>
+    <!-- <div class="container"> -->
+
+
+    <div class="content-section-a">
+        <div class="container">
+            <div class="row">
+                <div  class="col-sm-12 col-xs-12">
+                    <div class="ppad">
+                        <h2> 1: I am your Code thy God </h2>
+                        <p>
+                            You tell exactly what your program what it should do. When 
+                        </p>
+                    </div>
+                </div>
+
+                    <!-- <div class="col-sm-6 col-xs-12">
+                        <img class="img-responsive img-rescale commandp-img-pad" src="img/intro-command.png" alt="" style="max-height:300px;">
+                    </div> -->
+                </div>
+            </div>      
+            <!-- /.container -->
+        </div>
+
+        <div class="content-section-b">
+            <div class="container">
+                <div class="row">
+                    <div  class="col-sm-12 col-xs-12">
+                        <div class="ppad">
+                            <h2> 2: Thou shalt not take your Code in Vain </h2>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia expedita, aspernatur sequi deserunt cupiditate. Harum obcaecati perspiciatis, perferendis. Ad, magnam beatae. Qui, sapiente porro culpa. Accusantium, assumenda ea quos consectetur harum voluptates nemo esse tenetur libero rerum provident voluptas facilis molestiae obcaecati reprehenderit debitis, dolorem molestias iste quidem fuga voluptate!
+                            </p>
+                        </div>
+                    </div>
+
+                    <!-- <div class="col-sm-6 col-xs-12">
+                        <img class="img-responsive img-rescale commandp-img-pad" src="img/intro-command.png" alt="" style="max-height:300px;">
+                    </div> -->
+                </div>
+            </div>      
+            <!-- /.container -->
+            <!-- </div> -->
+
+        </div>
+
+        <div class="content-section-a">
+            <div class="container">
+                <div class="row">
+                    <div  class="col-sm-12 col-xs-12">
+                        <div class="ppad">
+                            <h2> 3: Remember thy Contract, and keep it Holy </h2>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia expedita, aspernatur sequi deserunt cupiditate. Harum obcaecati perspiciatis, perferendis. Ad, magnam beatae. Qui, sapiente porro culpa. Accusantium, assumenda ea quos consectetur harum voluptates nemo esse tenetur libero rerum provident voluptas facilis molestiae obcaecati reprehenderit debitis, dolorem molestias iste quidem fuga voluptate!
+                            </p>
+                        </div>
+                    </div>
+
+                    <!-- <div class="col-sm-6 col-xs-12">
+                        <img class="img-responsive img-rescale commandp-img-pad" src="img/intro-command.png" alt="" style="max-height:300px;">
+                    </div> -->
+                </div>
+            </div>      
+            <!-- /.container -->
+            <!-- </div> -->
+
+        </div>
+
+        <div class="content-section-b">
+            <div class="container">
+                <div class="row">
+                    <div  class="col-sm-12 col-xs-12">
+                        <div class="ppad">
+                            <h2> 4: Honor thy Name and thy Style </h2>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia expedita, aspernatur sequi deserunt cupiditate. Harum obcaecati perspiciatis, perferendis. Ad, magnam beatae. Qui, sapiente porro culpa. Accusantium, assumenda ea quos consectetur harum voluptates nemo esse tenetur libero rerum provident voluptas facilis molestiae obcaecati reprehenderit debitis, dolorem molestias iste quidem fuga voluptate!
+                            </p>
+                        </div>
+                    </div>
+
+                    <!-- <div class="col-sm-6 col-xs-12">
+                        <img class="img-responsive img-rescale commandp-img-pad" src="img/intro-command.png" alt="" style="max-height:300px;">
+                    </div> -->
+                </div>
+            </div>      
+            <!-- /.container -->
+            <!-- </div> -->
+
+        </div>
+
+        <div class="content-section-a">
+            <div class="container">
+                <div class="row">
+                    <div  class="col-sm-12 col-xs-12">
+                        <div class="ppad">
+                            <h2> 5: Seek the Paths the Apostles have laid before thee </h2>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia expedita, aspernatur sequi deserunt cupiditate. Harum obcaecati perspiciatis, perferendis. Ad, magnam beatae. Qui, sapiente porro culpa. Accusantium, assumenda ea quos consectetur harum voluptates nemo esse tenetur libero rerum provident voluptas facilis molestiae obcaecati reprehenderit debitis, dolorem molestias iste quidem fuga voluptate!
+                            </p>
+                        </div>
+                    </div>
+
+                    <!-- <div class="col-sm-6 col-xs-12">
+                        <img class="img-responsive img-rescale commandp-img-pad" src="img/intro-command.png" alt="" style="max-height:300px;">
+                    </div> -->
+                </div>
+            </div>      
+            <!-- /.container -->
+            <!-- </div> -->
+
+        </div>
+
+    </div>
+
+    <div class="content-section-b">
+        <div class="container">
+            <div class="row">
+                <div  class="col-sm-12 col-xs-12">
+                    <div class="ppad">
+                        <h2> 6: Keep to thy Methods with Brevity and Faith </h2>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia expedita, aspernatur sequi deserunt cupiditate. Harum obcaecati perspiciatis, perferendis. Ad, magnam beatae. Qui, sapiente porro culpa. Accusantium, assumenda ea quos consectetur harum voluptates nemo esse tenetur libero rerum provident voluptas facilis molestiae obcaecati reprehenderit debitis, dolorem molestias iste quidem fuga voluptate!
+                        </p>
+                    </div>
+                </div>
+
+                    <!-- <div class="col-sm-6 col-xs-12">
+                        <img class="img-responsive img-rescale commandp-img-pad" src="img/intro-command.png" alt="" style="max-height:300px;">
+                    </div> -->
+                </div>
+            </div>      
+            <!-- /.container -->
+            <!-- </div> -->
+
+        </div>
+
+    </div>
+
+    <div class="content-section-a">
+        <div class="container">
+            <div class="row">
+                <div  class="col-sm-12 col-xs-12">
+                    <div class="ppad">
+                        <h2> 7: Thine ally be Google. Thine enemy, Darkness.  </h2>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia expedita, aspernatur sequi deserunt cupiditate. Harum obcaecati perspiciatis, perferendis. Ad, magnam beatae. Qui, sapiente porro culpa. Accusantium, assumenda ea quos consectetur harum voluptates nemo esse tenetur libero rerum provident voluptas facilis molestiae obcaecati reprehenderit debitis, dolorem molestias iste quidem fuga voluptate!
+                        </p>
+                    </div>
+                </div>
+
+                    <!-- <div class="col-sm-6 col-xs-12">
+                        <img class="img-responsive img-rescale commandp-img-pad" src="img/intro-command.png" alt="" style="max-height:300px;">
+                    </div> -->
+                </div>
+            </div>      
+            <!-- /.container -->
+            <!-- </div> -->
+
+        </div>
+
+    </div>
+
+    <div class="content-section-b">
+        <div class="container">
+            <div class="row">
+                <div  class="col-sm-12 col-xs-12">
+                    <div class="ppad">
+                        <h2> 8: Thou shalt keep thyself organized, for Chaos and Madness await thee </h2>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia expedita, aspernatur sequi deserunt cupiditate. Harum obcaecati perspiciatis, perferendis. Ad, magnam beatae. Qui, sapiente porro culpa. Accusantium, assumenda ea quos consectetur harum voluptates nemo esse tenetur libero rerum provident voluptas facilis molestiae obcaecati reprehenderit debitis, dolorem molestias iste quidem fuga voluptate!
+                        </p>
+                    </div>
+                </div>
+
+                    <!-- <div class="col-sm-6 col-xs-12">
+                        <img class="img-responsive img-rescale commandp-img-pad" src="img/intro-command.png" alt="" style="max-height:300px;">
+                    </div> -->
+                </div>
+            </div>      
+            <!-- /.container -->
+            <!-- </div> -->
+
+        </div>
+
+    </div>
+
+    <div class="content-section-a">
+        <div class="container">
+            <div class="row">
+                <div  class="col-sm-12 col-xs-12">
+                    <div class="ppad">
+                        <h2> 9: Keep thy ego from thy Code </h2>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia expedita, aspernatur sequi deserunt cupiditate. Harum obcaecati perspiciatis, perferendis. Ad, magnam beatae. Qui, sapiente porro culpa. Accusantium, assumenda ea quos consectetur harum voluptates nemo esse tenetur libero rerum provident voluptas facilis molestiae obcaecati reprehenderit debitis, dolorem molestias iste quidem fuga voluptate!
+                        </p>
+                    </div>
+                </div>
+
+                    <!-- <div class="col-sm-6 col-xs-12">
+                        <img class="img-responsive img-rescale commandp-img-pad" src="img/intro-command.png" alt="" style="max-height:300px;">
+                    </div> -->
+                </div>
+            </div>      
+            <!-- /.container -->
+            <!-- </div> -->
+
+        </div>
+
+        <div class="content-section-b">
+            <div class="container">
+                <div class="row">
+                    <div  class="col-sm-12 col-xs-12">
+                        <div class="ppad">
+                            <h2> 10: Thou shalt fear no evil; for thy Friends art with thee </h2>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia expedita, aspernatur sequi deserunt cupiditate. Harum obcaecati perspiciatis, perferendis. Ad, magnam beatae. Qui, sapiente porro culpa. Accusantium, assumenda ea quos consectetur harum voluptates nemo esse tenetur libero rerum provident voluptas facilis molestiae obcaecati reprehenderit debitis, dolorem molestias iste quidem fuga voluptate!
+                            </p>
+                        </div>
+                    </div>
+
+                    <!-- <div class="col-sm-6 col-xs-12">
+                        <img class="img-responsive img-rescale commandp-img-pad" src="img/intro-command.png" alt="" style="max-height:300px;">
+                    </div> -->
+                </div>
+            </div>      
+            <!-- /.container -->
+            <!-- </div> -->
+
+        </div>
+
+    </div>
+    <!-- /.content-section-a -->
+</div>
+<!-- /.content-section-b -->
+
+
+
+<footer>
+    <div class="container">
+        <hr class="section-footing-spacer">
+        <div class="row">
+            <div class="col-lg-12">
+                <ul class="list-inline">
+                    <li><a href="index.html">Home</a>
+                    </li>
+                    <li class="footer-menu-divider">&sdot;</li>
+                    <li><a href="about.html">About</a>
+                    </li>
+                    <li class="footer-menu-divider">&sdot;</li>
+                    <li><a href="#services">Services</a>
+                    </li>
+                    <li class="footer-menu-divider">&sdot;</li>
+                    <li><a href="#contact">Contact</a>
+                    </li>
+                </ul>
+                <p class="copyright text-muted small">Copyright &copy; Quan Zhou 2014. All Rights Reserved</p>
             </div>
         </div>
-    </footer>
+    </div>
+</footer>
 
-    <!-- JavaScript -->
-    <script src="js/jquery-1.10.2.js"></script>
-    <script src="js/bootstrap.js"></script>
+<!-- JavaScript -->
+<script src="js/jquery-1.10.2.js"></script>
+<script src="js/bootstrap.js"></script>
 
 </body>
 
