--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                             <li><a href="about.html">About</a>
                             </li>
                             <li class="footer-menu-divider">&sdot;</li>
-                            <li><a href="#services">Services</a>
+                            <li><a href="firstdraft/index.html">Services</a>
                             </li>
                             <li class="footer-menu-divider">&sdot;</li>
                             <li><a href="#contact">Contact</a>
