moved some unnecessary files out

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                             <li><a href="firstdraft/index.html">Services</a>
                             </li>
                             <li class="footer-menu-divider">&sdot;</li>
-                            <li><a href="#contact">Contact</a>
+                            <li><a href="samplewebsite/index.html">Contact</a>
                             </li>
                         </ul>
                         <p class="copyright text-muted small">Copyright &copy; Quan Zhou 2014. All Rights Reserved</p>
