--- a/samplewebsite/index.html
+++ b/samplewebsite/index.html
@@ -194,7 +194,7 @@
 							<p>
 								<div class="col-sm-6">
 									<h1>
-										This is my First website
+										This is my first website!
 									</h1>
 
 									<p>
@@ -219,7 +219,7 @@
 								</div>
 								<div class="col-sm-8">
 									<h3>
-										This is awesome (right)
+										This is awesome (I love cats)
 									</h3>
 
 									<p>
