Made changes to reflect F14 events

--- a/about.html
+++ b/about.html
@@ -45,9 +45,7 @@
                     <ul class="nav navbar-nav">
                         <li><a href="about.html">About</a>
                         </li>
-                        <li><a href="#services">Services</a>
-                        </li>
-                        <li><a href="#contact">Contact</a>
+                        <li><a href="resume.html">Resume</a>
                         </li>
                     </ul>
                 </div>
@@ -77,22 +75,16 @@
                             <div>
                                 <div class="col-sm-7" id="abouttext">  
                                     <p class="ppad"> 
-                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi quo pariatur, eveniet provident, aspernatur corrupti dignissimos nisi expedita harum deleniti consequatur voluptatibus delectus molestias, ducimus quisquam, voluptate in! Consequuntur asperiores itaque exercitationem quis repellendus consequatur repudiandae quas iste quia reprehenderit maiores nemo recusandae animi doloribus, rerum dolor accusamus, aspernatur adipisci nihil, dicta nulla tempore amet unde deleniti.
+                                        Welcome to my website! I am currently a Senior in the Mechanical and Aerospace Department at Princeton, and I love to build things. Like many other Senior undergraduates in MAE, I spend most of his time foiling my schedule's attempts to kill me.  In the coveted lulls between my problem sets, coding assignments, and his responsibilities as the Vice-President of the Princeton Charter Club, I enjoy running 2-3 miles everyday, watching the Big Bang Theory, and crashing with his friends in some good 'ol fashion video gaming.  
                                     </p> 
 
 
                                     <p class = "ppad">
-                                        Inventore, ut possimus. Voluptas ratione explicabo quos ut quibusdam, consequuntur veritatis similique. A quibusdam sed veritatis, neque optio, facilis nisi. Nostrum tenetur repudiandae animi perspiciatis veniam accusantium officiis voluptatum praesentium tempora, minima autem expedita deleniti quidem alias quo repellat perferendis temporibus officia qui nulla harum! Itaque, ad beatae earum pariatur qui delectus adipisci molestias. Repudiandae sit perspiciatis nam ex, voluptate dolorum nesciunt consequuntur pariatur at minima consequatur hic debitis aut neque unde odio reprehenderit quis illum vero ab, doloremque veritatis. Sed autem, officia voluptate eius qui numquam facilis possimus, voluptatibus consequuntur ratione placeat. Voluptatem praesentium modi nobis asperiores pariatur veniam ratione.
+                                        I created this website as part of a project of how to learn website development. It took me 1-2 hours everyday for about a month to learn the HTML, CSS, and Bootstrap Framework to erect these pages, and I hope that you enjoy this modest little website. If you want to check out a cooler looking one, visit <a href="http://www.princetonwebdev.org"> www.princetonwebdev.org </a> for an elegant website that I created as the founder of the 'Princeton Website Development Workshop.' It  took me about 6-8 hours to get to get this static webpage up and running w/ google forms as control for our sign-ups. Our event had over 80 people sign up, and 20 georgeous websites featured at our website gallery. I look foward to organizing it again in the spring due to the overwhelming wave of interest as a result of this workshop. 
 
                                     </p>
 
-                                    <p class = "ppad">
-                                        Architecto voluptatum labore unde minus at harum dicta, deleniti neque obcaecati iste in, fuga doloremque? Quasi magnam dolorum incidunt iusto id quaerat impedit officiis harum nostrum numquam omnis nulla ea dignissimos autem velit, suscipit optio fuga rem eius. Architecto saepe asperiores et perferendis praesentium totam quaerat laudantium dolores eos placeat fuga commodi ullam nisi doloribus alias eum quasi impedit veniam, consequatur delectus distinctio neque dolor? Consequuntur doloremque ab sint expedita maxime amet, explicabo error officia quod dolorem recusandae fuga a sit, consequatur veniam neque, pariatur beatae aperiam. Odit vero maiores soluta recusandae. Ipsam corporis, quibusdam tenetur. At, quidem quia architecto culpa quos libero quo repellendus vitae, dicta commodi labore eligendi. Esse libero sunt sapiente aspernatur, nihil dolorum ea dicta porro maxime ipsam doloremque vitae cum perspiciatis minima. Accusantium dolorem iure blanditiis, provident
-                                    </p>
-
-                                    <p> 
-                                        Esse modi blanditiis dolorum repellendus numquam quae sit veniam consequatur. 
-                                    </p>
+                                    If you want to contact me, my email is quanzhou@princeton.edu. I look foward to hearing from you. 
 
 
                                 </div>
@@ -133,33 +125,6 @@
 <!-- /.content-section-b -->
 
 
-
-
-<!----------------------------------------------- end content ------------------------------------------>
-
-<footer>
-    <div class="container">
-        <hr class="section-footing-spacer">
-        <div class="row">
-            <div class="col-lg-12">
-                <ul class="list-inline">
-                    <li><a href="index.html">Home</a>
-                    </li>
-                    <li class="footer-menu-divider">&sdot;</li>
-                    <li><a href="about.html">About</a>
-                    </li>
-                    <li class="footer-menu-divider">&sdot;</li>
-                    <li><a href="#services">Services</a>
-                    </li>
-                    <li class="footer-menu-divider">&sdot;</li>
-                    <li><a href="#contact">Contact</a>
-                    </li>
-                </ul>
-                <p class="copyright text-muted small">Copyright &copy; Quan Zhou 2014. All Rights Reserved</p>
-            </div>
-        </div>
-    </div>
-</footer>
 
 <!-- JavaScript -->
 <script src="js/jquery-1.10.2.js"></script>
