--- a/resume.html
+++ b/resume.html
@@ -80,7 +80,7 @@
                             </h2>
 
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia expedita, aspernatur sequi deserunt cupiditate. Harum obcaecati perspiciatis, perferendis. Ad, magnam beatae. Qui, sapiente porro culpa. Accusantium, assumenda ea quos consectetur harum voluptates nemo esse tenetur libero rerum provident voluptas facilis molestiae obcaecati reprehenderit debitis, dolorem molestias iste quidem fuga voluptate!
+                                I got bored of how bland "standard" resume's were, and I decided to make an awesome typographic resume on the left. But, if you're the person who appreciates simple content, I provided a standard one on the right. Enjoy!
                             </p>
 
                         </div>
@@ -115,30 +115,6 @@
 <!-- /.content-section-b -->
 
 
-
-<footer>
-    <div class="container">
-        <hr class="section-footing-spacer">
-        <div class="row">
-            <div class="col-lg-12">
-                <ul class="list-inline">
-                    <li><a href="index.html">Home</a>
-                    </li>
-                    <li class="footer-menu-divider">&sdot;</li>
-                    <li><a href="about.html">About</a>
-                    </li>
-                    <li class="footer-menu-divider">&sdot;</li>
-                    <li><a href="#services">Services</a>
-                    </li>
-                    <li class="footer-menu-divider">&sdot;</li>
-                    <li><a href="contact.html">Contact</a>
-                    </li>
-                </ul>
-                <p class="copyright text-muted small">Copyright &copy; Quan Zhou 2014. All Rights Reserved</p>
-            </div>
-        </div>
-    </div>
-</footer>
 
 <!-- JavaScript -->
 <script src="js/jquery-1.10.2.js"></script>
