placed suggestion for viewing resume

--- a/resume.html
+++ b/resume.html
@@ -78,7 +78,7 @@
                             </h2>
 
                             <p>
-                                I got bored of how bland "standard" resume's were, and I decided to make an awesome typographic resume on the left. But, if you're the person who appreciates simple content, I provided a standard one on the right. Enjoy!
+                                I got bored of how bland "standard" resume's were, and I decided to make an awesome typographic resume on the left. But, if you're the person who appreciates simple content, I provided a standard one on the right. Enjoy - just right click the resume, and view the high quality image in a new tab :)
                             </p>
 
                         </div>
