--- a/resume.html
+++ b/resume.html
@@ -92,7 +92,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 column">
-                        <img class="img-responsive img-rescale" src="img/TypographicResume.jpg" alt="">
+                        <img class="img-responsive img-rescale" src="img/TypographicResume.png" alt="">
                     </div>
                     <div class="col-md-6 column">
                         <img class="img-responsive img-rescale" src="img/ResumeS14.jpg" alt="">
