updated a lot of the old details on the site including the thesis, recent projects section on the index.html and most of the about.html page

--- a/about.html
+++ b/about.html
@@ -75,16 +75,21 @@
                             <div>
                                 <div class="col-sm-7" id="abouttext">  
                                     <p class="ppad"> 
-                                        Welcome to my website! I am currently a Senior in the Mechanical and Aerospace Department at Princeton, and I love to build things. Like many other Senior undergraduates in MAE, I spend most of his time foiling my schedule's attempts to kill me.  In the coveted lulls between my problem sets, coding assignments, and his responsibilities as the Vice-President of the Princeton Charter Club, I enjoy running 2-3 miles everyday, watching the Big Bang Theory, and crashing with his friends in some good 'ol fashion video gaming.  
+                                        Welcome to my website! I am currently a Senior in the Mechanical and Aerospace Department at Princeton, and I love to build things. Like many other Senior undergraduates in MAE, I spend most of his time foiling my schedule's attempts to kill me.  In the coveted lulls between my problem sets, coding assignments, and my responsibilities as the Vice-President of the Princeton Charter Club, I enjoy running 2-3 miles everyday, watching the Big Bang Theory, and crashing with my friends in some good 'ol fashion video gaming.  
                                     </p> 
 
 
                                     <p class = "ppad">
-                                        I created this website as part of a project of how to learn website development. It took me 1-2 hours everyday for about a month to learn the HTML, CSS, and Bootstrap Framework to erect these pages, and I hope that you enjoy this modest little website. If you want to check out a cooler looking one, visit <a href="http://www.princetonwebdev.org"> www.princetonwebdev.org </a> for an elegant website that I created as the founder of the 'Princeton Website Development Workshop.' It  took me about 6-8 hours to get to get this static webpage up and running w/ google forms as control for our sign-ups. Our event had over 80 people sign up, and 20 georgeous websites featured at our website gallery. I look foward to organizing it again in the spring due to the overwhelming wave of interest as a result of this workshop. 
-
+                                        I created this website as part of a project of how to learn website development. It took me 1-2 hours everyday for about a month to learn the HTML, CSS, and Bootstrap Framework to erect these pages, and I hope that you enjoy this modest little website. 
+                                    </p>
+                                    
+                                    <p class="ppad">
+                                        Since the creation of this webpage, I've been working on a lot of other web-related projects with other awesome princeton students. I spend a lot of my time and energy working teaching Hack Classes, which tries to encourage cool side-project. So far, we've held a 8-hour <a href="www.princetonwebdev.org"> workshop </a>, a Wintercession class on Data Science, and several series of classes in Web Development. I'm most excited about classes in the spring semester, where we'll be tying a lot of other related technologies such as web automation, scraping, and data science into the mix. 
                                     </p>
 
-                                    If you want to contact me, my email is quanzhou@princeton.edu. I look foward to hearing from you. 
+                                    <p class="ppad">
+                                        If you want to contact me, my email is quanzhou@princeton.edu. I look foward to hearing from you. 
+                                    </p>
 
 
                                 </div>
@@ -104,7 +109,7 @@
                         <div class="col-xs-12">
                             <div class="container">
                                 <div class="col-xs-8 col-xs-offset-2">
-                                    <h2> What I've Been Up to This Year: </h2>
+                                    <h2> What I've Been Up to In The Past Year: </h2>
                                     <div class="row">
                                        <div class="flex-video widescreen" style="margin: 0 auto;text-align:center;">
                                         <iframe allowfullscreen="" src="http://player.vimeo.com/video/79921197?title=0&amp;byline=0&amp;portrait=0" frameborder="0" width="700" height="393"></iframe>
