--- a/index.html
+++ b/index.html
@@ -61,14 +61,6 @@
                         <h2> Dream. Plan. Build </h2>
                         <hr class="intro-divider">
                         <h3>Princeton Mechanical and Aerospace Engineer '15</h3>
-                       <!--  <ul class="list-inline intro-social-buttons">
-                            <li><a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
-                            </li>
-                            <li><a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-                            </li>
-                            <li><a href="#" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
-                            </li>
-                        </ul> -->
                     </div>
                 </div>
             </div>
@@ -89,16 +81,18 @@
                 <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6" >
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">My Senior Thesis
+                    <h2 class="section-heading">My Senior Thesis: H.E.L.P.: Highly (E)nquisive Learning Probe
                     </h2>
-                    Quadcopters are cool. Nueral Networks are cool. The Microsoft Kinetic is pretty cool. Why not combine the three of them in a snazzy autonomous vehicle?  <br> <br>
+                    It’s an Autonomous robot that asks people for help when it gets lost! <br> <br>
 
-                    My senior thesis this winter will concentrate on the decision making process and implementation of using the inputs from a Microsoft Kinetic camera to influence the decision making process of a CMAC Nueral network. Come spring, I hope to build such an awesome machine so I can rule the wor- I mean, explore the world. 
+                    My Senior thesis concentrates on creating a robot that autonomously navigates unknown indoor environments with SLAM techinques. When lost, it asks humans to help lead it close to the goal location. This project involves collision avoidance, skeletal detection, and particle filtering.  Metadata from the Kinect is digested by SLAM (Simultaneous Localization and Mapping) techniques that drive decision making processes. The whole system is nicely glued together with ROS (Robotics Operating System). 
+                    <br><br>
+                    Thanks to the awesome researchers who have worked on this system (Turtlebot group), I have an awesome project base from which to launch my thesis. 
 
                     </p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <img class="img-responsive img-rescale" src="img/nueral-network.png" alt="" style="margin-top:50px;">
+                    <img class="img-responsive img-rescale" src="img/turtlebot.png" alt="" style="margin-top:50px;">
                 </div>
             </div>
 
@@ -120,9 +114,9 @@
                 <hr class="section-heading-spacer">
                 <div class="clearfix"></div>
                 <h2 class="section-heading"> My Most Recent Project </h2>
-                <p class="lead"> Princeton Website Development Workshop <br> 
+                <p class="lead"> Introduction to Hack Classes <br> 
                    <br>
-                   I'm also a secret COS Major at heart. Code excites me, and so does the internet. I wanted to share this love by hosting a Website Development workshop to teach students who want to create their own webpage using the twitter Bootstrap framework. Check us out <a href="http://www.princetonwebdev.org" target="_blank"> here </a>. 
+                   I'm also a secret COS Major at heart. Code excites me, and so does the internet. At Hack Classes: Web Development, we teach 70+ students of all experiences how to make their own static and dynamic websites. This spring, I'll be adding a couple of cool web-related classes, such as web scraping and web automation. This will lead to some brief introduction to some data science techniques, such as SVM's and logistic regression. You can check out the site for our first event <a href="http://www.princetonwebdev.org" target="_blank"> here </a>. 
                </p>
            </div>
            <div class="col-lg-5 col-lg-offset-2 col-sm-6">
@@ -183,7 +177,7 @@
                     <br>Special Thanks</h2>
                     <p class="lead">A special thanks to Boostrap for getting this site up and running. Check libraries of sleek and functional HTML and CSS components <a target="_blank" href="http://getbootstrap.com/"> here</a>. </p>
 
-                    <p class = "lead"> A shoutout to Shubro Saha '15 and Charlie Marsh '15 for inspiring me with their <a target="_blank" href="http://introtohacking.github.io/"> introduction to hacking </a> class. Nihar Madhavan '15 also deserves credit for his tutorial on website creation on <a target="_blank" href="http://www.princeton.edu/~madhavan/website.html"> Princeton domain</a>. </p>
+                    <p class = "lead"> A shoutout to Shubro Saha '15 and Charlie Marsh '15 for inspiring me with their <a target="_blank" href="http://introtohacking.github.io/"> introduction to hacking </a> class. Nihar Madhavan '15 also deserves credit for his tutorial on website creation on <a target="_blank" href="http://www.princeton.edu/~madhavan/website.html"> Princeton domain</a>. Finally, my fellow hack classes instructors, Frank Jiang '17, Collin Stedman '15 and Michel Perel '17, all deserve mention for giving me so much COS-driven energy. </p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
 
@@ -193,32 +187,6 @@
 
         </div>
         
-        <!-- /.banner -->
-
- <!--        <footer>
-            <div class="container">
-                <hr class="section-footing-spacer">
-                <div class="row">
-                    <div class="col-lg-12">
-
-                        <ul class="list-inline">
-                            <li><a href="index.html">Home</a>
-                            </li>
-                            <li class="footer-menu-divider">&sdot;</li>
-                            <li><a href="about.html">About</a>
-                            </li>
-                            <li class="footer-menu-divider">&sdot;</li>
-                            <li><a href="firstdraft/index.html">Services</a>
-                            </li>
-                            <li class="footer-menu-divider">&sdot;</li>
-                            <li><a href="samplewebsite/index.html">Contact</a>
-                            </li>
-                        </ul>
-                        <p class="copyright text-muted small">Copyright &copy; Quan Zhou 2014. All Rights Reserved</p>
-                    </div>
-                </div>
-            </div>
-        </footer> -->
 
         <!-- JavaScript -->
         <script src="js/jquery-1.10.2.js"></script>
